--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,7 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
+    --font-size: 1rem;
   }
   .dark {
     --background: 240 5.9% 10%;
@@ -68,5 +69,6 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+    font-size: var(--font-size);
   }
 }
